# upres-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  jest.config.js  package-lock.json  package.json  pyproject.toml  tsup.config.ts
.github/workflows/: publish-npm.yml  test.yml
docs/: models.md
examples/: batch-upscale-folder.js  ecommerce-pipeline.js  figma-plugin-stub.md  lightroom-export-hook.md  restore-photo-folder.py
python/upres/: __init__.py  cli.py  client.py
src/: cli.ts  client.ts  models.ts  types.ts
tests/: client.test.ts  test_client.py
