[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "upres-ai"
version = "0.1.0"
description = "Official Python SDK + CLI for upres.ai — AI image & video upscaling"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "upres.ai", email = "support@upres.ai" }]
keywords = [
  "ai",
  "upscaling",
  "image-processing",
  "real-esrgan",
  "seedvr2",
  "video-upscaling",
  "cli",
  "api",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0", "mypy>=1.0", "respx>=0.20"]

[project.scripts]
upres = "upres.cli:main"

[project.urls]
Homepage = "https://upres.ai"
Documentation = "https://upres.ai/docs"
Repository = "https://github.com/auroracapital/upres-cli"
"Bug Tracker" = "https://github.com/auroracapital/upres-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["python/upres"]

[tool.hatch.build.targets.sdist]
include = ["python/upres", "README.md", "LICENSE"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
